# smart-data-quality-auto-healing-pipeline

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
anomaly_detection/: anomaly_detector.py  iqr_detector.py  local_outlier_factor.py  zscore_detector.py
audit/: audit_report.py  repair_history.py
auto_healing/: duplicate_handler.py  formatting_engine.py  ml_based_healing.py  referential_integrity_fix.py  rule_based_healing.py
config/: config_loader.py  logging.yaml  pipeline_config.yaml  validation_rules.yaml
configs/: database.yaml  ml_config.yaml  pipeline_config.yaml  validation_rules.yaml
dashboard/: overview.py  pipeline_status.py
data/sample_data/: employees.csv
ml/: evaluate.py
orchestration/: airflow_dag.py  task_runner.py
profiling/: distribution_analysis.py  duplicate_analysis.py  profile_generator.py  statistics.py
quality_score/: metrics.py  scoring_engine.py
schema/: schema_comparator.py  schema_registry.py  schema_validator.py
src/: main.py
src/alerts/: __init__.py  email_alert.py
src/anomaly_detection/: __init__.py  isolation_forest.py  one_class_svm.py
src/audit/: __init__.py  change_tracker.py
src/auto_healing/: __init__.py  base_healer.py  healer_manager.py  healing_result.py
src/core/: __init__.py  pipeline.py  retry_manager.py
src/dashboard/: __init__.py  healing_dashboard.py  validation_dashboard.py
src/ml/: __init__.py  (+2 more)
utils/: constants.py  file_utils.py  metadata_store.py
validation/: accuracy.py  datatype_validation.py  uniqueness.py  validator.py
(+39 files in other folders)
