[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-data-quality-auto-healing-pipeline"
version = "0.1.0"
description = "Data quality validation and auto-healing pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = []
